--- a/venues.html
+++ b/venues.html
@@ -249,26 +249,26 @@
     Feb 13, 2015: Billy Childs Quartet</br>
     Feb 19, 2015: New York Standards Quartet</p>
 
-The Auditorium at the Scripps Research Institute
+<h3>The Auditorium at the Scripps Research Institute</h3>
 
     Jan 25, 2015: Jiayan Sun</br>
     Feb 8, 2015: Ingolf Wunder</br>
     Apr 26, 2015: Han Bin Yoon</br>
 
-Bahia Resort Hotel
+<h3>Bahia Resort Hotel</h3>
 
     Dec 18: DJ Mike Czech</br>
     Dec 31: New Years Eve on the Bahia Belle</br>
 
-The Bailey Wood Pit Barbecue
+<h3>The Bailey Wood Pit Barbecue</h3>
 
     Dec 13: Live music and dancing</br>
 
-Balboa Park Activity Center
+<h3>Balboa Park Activity Center</h3>
 
     Jan 19, 2015: All Peoples Celebration</br>
 
-Balboa Theatre
+<h3>Balboa Theatre</h3>
 
     Dec 13: SD Gay Men's Chorus Holiday Spectacular</br>
     Dec 20: Peter White Christmas</br>
@@ -282,7 +282,7 @@ Balboa Theatre
     May 3, 2015: Once Upon a Tiempo</br>
     May 16, 2015: Arturo Sandoval & Poncho Sanchez</br>
 
-The Bancroft
+<h3>The Bancroft</h3>
 
     Dec 18: Local Rhythm and Slum Summer</br>
     Dec 19: Nathan Hubbard's Passengers and Grex</br>
@@ -291,7 +291,7 @@ The Bancroft
     Jan 5, 2015: Growl</br>
     Jan 6, 2015: Bujie & the Highrise and Bleeskiez</br>
 
-Bar Dynamite
+<h3>Bar Dynamite</h3>
 
     Dec 12: 24K Gold</br>
     Dec 13: Bar Dynamite Saturdays</br>
@@ -308,7 +308,7 @@ Bar Dynamite
     Jan 3, 2015: Bar Dynamite Saturdays</br>
     Jan 9, 2015: 24K Gold</br>
 
-Bar Pink
+<h3>Bar Pink</h3>
 
     Dec 12: Behind the Wagon</br>
     Dec 14: Rat Sabbath with DJ Ratty</br>
@@ -323,7 +323,7 @@ Bar Pink
     Dec 26: 80s Heart 90s</br>
     Jan 24, 2015: Gone Baby Gone, Schitzophonics, Loons</br>
 
-Barleymash
+<h3>Barleymash</h3>
 
     Dec 15: DJ Slowhand</br>
     Dec 19: DJ Fresh One</br>
@@ -332,12 +332,12 @@ Barleymash
     Dec 24: DJ Demon</br>
     Dec 29: DJ Slowhand</br>
 
-Bassmnt
+<h3>Bassmnt</h3>
 
     Dec 13: EDX</br>
     Dec 31: Tritonal</br>
 
-Beaumont's
+<h3>Beaumont's</h3>
 
     Dec 12: Dave Gleason Trio</br>
     Dec 13: Jones Revival</br>
@@ -348,7 +348,7 @@ Beaumont's
     Dec 26: Fish & the Seaweeds</br>
     Dec 31: Rare Form</br>
 
-Belly Up
+<h3>Belly Up</h3>
 
     Dec 12: Pepper, the Movement, New Beat Fund</br>
     Dec 14: For the Sender: Sean & Sara Watkins</br>
@@ -430,19 +430,19 @@ Belly Up
 
     Dec 13: Robin Henkel</br>
 
-Bistro Sixty & San Diego Desserts
+<h3>Bistro Sixty & San Diego Desserts</h3>
 
     Dec 16: Bob Wade and Suzanne Shea
 
-Black Cat Bar
+<h3>Black Cat Bar</h3>
 
     Dec 20: Fast Heart Mart and MJ Stevens</br>
 
-Blackthorn Irish Pub & Grub
+<h3>Blackthorn Irish Pub & Grub</h3>
 
     Jan 9, 2015: Blown Fuse</br>
 
-Boar Cross'n
+<h3>Boar Cross'n</h3>
 
     Dec 12: Club Musae</br>
     Dec 13: Twisted Relatives</br>
@@ -460,7 +460,7 @@ Boar Cross'n
     Jan 16, 2015: Club Musae</br>
     Jan 20, 2015: Video DJ</br>
 
-Brass Rail
+<h3>Brass Rail</h3>
 
     Dec 12: Hip-Hop Fridayz</br>
     Dec 13: Sabado en Fuego</br>
@@ -476,7 +476,7 @@ Brass Rail
     Jan 3, 2015: Sabado en Fuego</br>
     Jan 5, 2015: Manic Monday</br>
 
-Bread & Salt
+<h3>Bread & Salt</h3>
 
     Jan 15, 2015: Fresh Sound: Red Fish Blue Fish</br>
     Feb 6, 2015: Fresh Sound: Ross Karre</br>
@@ -487,7 +487,7 @@ Bread & Salt
     May 1, 2015: Fresh Sound: Kjell Nordeson</br>
     May 9, 2015: MIXX Concert Series: The Bossa Nova</br>
 
-Brick by Brick
+<h3>Brick by Brick</h3>
 
     Dec 12: A Time For Dime Tribute Concert</br>
     Dec 13: Strung Out, H20, Skipjack, Somatic</br>
@@ -511,19 +511,19 @@ Brick by Brick
     Feb 19, 2015: 10 Years, Otherwise, Luminoth</br>
     Feb 27, 2015: Zepparella and Hell's Belles</br>
 
-Broke Girls Coffee Bar
+<h3>Broke Girls Coffee Bar</h3>
 
     Dec 26: Open Mic</br>
 
-CSU San Marcos
+<h3>CSU San Marcos</h3>
 
     Jun 21, 2015: National Guitar Workshop</br>
 
-Cafe Stoked
+<h3>Cafe Stoked</h3>
 
     Jan 1, 2015: Blown Fuse</br>
 
-California Center for the Arts, Escondido
+<h3>California Center for the Arts, Escondido</h3>
 
     Dec 12: America, Juice Newton, more</br>
     Dec 17: Lúnasa with Karan Casey</br>
@@ -542,28 +542,28 @@ California Center for the Arts, Escondido
     May 17, 2015: Center Children’s Chorus: Songs of America</br>
     May 31, 2015: Selections from Porgy and Bess</br>
 
-Canyon Crest Academy
+<h3>Canyon Crest Academy</h3>
 
     Dec 21: Holiday Band Concert</br>
 
-Carlsbad Senior Center
+<h3>Carlsbad Senior Center</h3>
 
     Dec 20: Noches de Invierno Flamenco Concert</br>
 
-Carlsbad Village Theatre
+<h3>Carlsbad Village Theatre</h3>
 
     Dec 16: Kainga Music Winter Steel Drum Concert</br>
     Mar 19, 2015: Cody Lovaas</br>
 
-Carvers Steak & Chops
+<h3>Carvers Steak & Chops</h3>
 
     Dec 26: Mirage</br>
 
-Casa del Prado
+<h3>Casa del Prado</h3>
 
     Dec 13: Classical Melodies in Balboa Park</br>
 
-The Casbah
+<h3>The Casbah</h3>
 
     Dec 12: Allah-Las and Tashaki Miyaki</br>
     Dec 13: My Brightest Diamond and Island Boy</br>
@@ -614,21 +614,21 @@ The Casbah
     Mar 20, 2015: Tim Barry, Jenny Owens Young, Cory Branan</br>
     Mar 31, 2015: Shlohmo</br>
 
-Central Library
+<h3>Central Library</h3>
 
     Dec 13: Handmade Holiday Craft Show</br>
     Dec 14: Fall Concert Series: Andrew Brownell</br>
 
-Chalice Unitarian Universalist Church
+<h3>Chalice Unitarian Universalist Church</h3>
 
     Dec 14: Randi's Damn Jingle Ball</br>
 
-Cheers Bar & Grill
+<h3>Cheers Bar & Grill</h3>
 
     Dec 13: Kamodo Roxx</br>
     Jan 3, 2015: Teaser</br>
 
-Chico Club
+<h3>Chico Club</h3>
 
     Dec 12: DJ Harvest Karaoke</br>
     Dec 13: Vinyl Pirates</br>
@@ -638,24 +638,24 @@ Chico Club
     Dec 27: Pharmacy</br>
     Dec 28: DJ Harvest Karaoke</br>
 
-Clairemont Library
+<h3>Clairemont Library</h3>
 
     Dec 17: De La Motte Strings Holiday Concert</br>
 
-Cole Library
+<h3>Cole Library</h3>
 
     Dec 14: Holiday Concert With Robert Parker</br>
 
-Company Pub and Kitchen
+<h3>Company Pub and Kitchen</h3>
 
     Dec 14: Open Mic Hosted by Martin Coughlin</br>
 
-Conrad Prebys Music Center at UCSD
+<h3>Conrad Prebys Music Center at UCSD</h3>
 
     Jan 10, 2015: Pacifica String Quartet</br>
     Feb 14, 2015: Dover Quartet</br>
 
-Copley Symphony Hall
+<h3>Copley Symphony Hall</h3>
 
     Dec 12: Jacobs Masterworks Series</br>
     Dec 15: Ryan Adams and Jenny Lewis</br>
@@ -669,16 +669,16 @@ Copley Symphony Hall
     Apr 25, 2015: Michael Feinstein: Songs of Sinatra</br>
     May 1, 2015: Jacobs Masterworks Series</br>
 
-Coronado Library
+<h3>Coronado Library</h3>
 
     Dec 13: Holiday Sing-Along</br>
     Dec 19: Holidays in Rio with Nossa Bossa Nova</br>
 
-Coronado School of the Arts
+<h3>Coronado School of the Arts</h3>
 
     Dec 14: Inspiration Series Concert</br>
 
-The Coyote Bar & Grill
+<h3>The Coyote Bar & Grill</h3>
 
     Dec 12: The Decades Band</br>
     Dec 13: Master Splinter & the Shredders</br>
@@ -693,7 +693,7 @@ The Coyote Bar & Grill
     Dec 28: Billy Martin</br>
     Dec 31: Master Splinter & the Shredders
 
-Croce's Park West
+<h3>Croce's Park West</h3>
 
     Dec 12: Teagan Taylor Trio</br>
     Dec 13: The John Reynolds Quartet</br>
@@ -715,22 +715,22 @@ Croce's Park West
     Dec 30: Nina Francis</br>
     Dec 31: Gilbert Castellanos & Park West Ensemble</br>
 
-Cuyamaca College
+<h3>Cuyamaca College</h3>
 
     Dec 12: Winter Wonder Jam</br>
     Apr 9, 2015: Concerto Köln: Baroque Concertos</br>
     Apr 26, 2015: The Myriad Trio: Baroque Rethought</br>
     May 7, 2015: 19th-Century Clarinet Trios</br>
 
-The Dana Hotel on Mission Bay
+<h3>The Dana Hotel on Mission Bay</h3>
 
     Feb 2, 2015: Jorma Kaukonen's Fur Piece Workshops</br>
 
-Del Mar Highlands Shopping Center
+<h3>Del Mar Highlands Shopping Center</h3>
 
     Dec 12: Weekend Jazz</br>
 
-Dirk's Niteclub
+<h3>Dirk's Niteclub</h3>
 
     Dec 12: Relax Max</br>
     Dec 13: Dance Party with DJ Grim</br>
@@ -744,7 +744,7 @@ Dirk's Niteclub
     Jan 3, 2015: Dance Party with DJ Alex</br>
     Jan 7, 2015: Karaoke Night</br>
 
-Dizzy's
+<h3>Dizzy's</h3>
 
     Dec 12: Mark Dresser Quintet</br>
     Dec 13: Charles Owens Quartet</br>
@@ -754,110 +754,110 @@ Dizzy's
     Jan 10, 2015: Brian Lynch Quartet</br>
     Jan 15, 2015: Chase Morrin Trio</br>
 
-Double Deuce
+<h3>Double Deuce</h3>
 
     Dec 31: 2015 New Year's Eve Party</br>
 
-Downtown Café
+<h3>Downtown Café</h3>
 
     Dec 20: Brown Sugar Band</br>
 
-Eastbound Bar & Grill
+<h3>Eastbound Bar & Grill</h3>
 
     Dec 12: DJ Skwiz</br>
     Dec 13: Will Ramsey</br>
     Dec 19: DJ Skwiz</br>
     Dec 26: DJ Johnny</br>
 
-El Cajon Elks Lodge #1812
+<h3>El Cajon Elks Lodge #1812</h3>
 
     Dec 31: Brown Sugar Band</br>
 
-El Cajon Grand
+<h3>El Cajon Grand</h3>
 
     Dec 17: The R&B Lounge</br>
 
-Encinitas Community and Senior Center
+<h3>Encinitas Community and Senior Center</h3>
 
     Dec 13: North Coast Symphony: Holiday Cabaret</br>
 
-Epicentre
+<h3>Epicentre</h3>
 
     Dec 13: From First to Last and Dayshell</br>
     Dec 19: Our Last Night, Richard Rogers, Dayseeker</br>
 
-Escondido Library
+<h3>Escondido Library</h3>
 
     Dec 13: FanFaire Foundation’s Young Artists</br>
     Jan 10, 2015: 2nd Saturday Concert Series</br>
 
-The Ferry Landing Marketplace
+<h3>The Ferry Landing Marketplace</h3>
 
     Dec 28: Velvet Cafe featuring Stacy Antonel</br>
 
-Fiesta Cantina
+<h3>Fiesta Cantina</h3>
 
     Dec 14: '90s Holiday Ugly Sweater Party</br>
 
-First United Methodist Church - Escondido
+<h3>First United Methodist Church - Escondido</h3>
 
     Dec 17: Music in the Air: A Holiday Concert</br>
 
-First United Methodist Church of San Diego
+<h3>First United Methodist Church of San Diego</h3>
 
     Dec 14: SD Children's Choir: European Christmas</br>
 
-Florent
+<h3>Florent</h3>
 
     Dec 18: Souljahs of Christ Music Festival</br>
     Dec 19: DJ Chris Cutz</br>
 
-Gallagher's Pub & Grill
+<h3>Gallagher's Pub & Grill</h3>
 
     Dec 18: Shamrocks & Dreadlocks</br>
 
-Ginger's
+<h3>Ginger's</h3>
 
     Dec 16: Joe Cardillo</br>
 
-The Go Lounge
+<h3>The Go Lounge</h3>
 
     Dec 15: Karaoke</br>
 
-Grace Episcopal Church
+<h3>Grace Episcopal Church</h3>
 
     Dec 13: 9 Lessons & Christmas Caroling</br>
 
-The Grand Del Mar
+<h3>The Grand Del Mar</h3>
 
     Dec 12: Fridays with Rick Ross</br>
 
-Greene Music Recital Hall
+<h3>Greene Music Recital Hall</h3>
 
     Dec 20: Digital Piano: The Wireless Revolution</br>
 
-Greenfield Middle School
+<h3>Greenfield Middle School</h3>
 
     Dec 12: Staump Fall Concert 2014</br>
 
-Hacienda Casa Blanca
+<h3>Hacienda Casa Blanca</h3>
 
     Dec 17: Mambo Trombo Trio</br>
 
-Hard Rock Hotel
+<h3>Hard Rock Hotel</h3>
 
     Dec 14: Industry Night at 207</br>
     Dec 31: New Year's Eve 2015</br>
 
-Hennessey's Tavern
+<h3>Hennessey's Tavern</h3>
 
     Dec 12: Joe Cardillo</br>
 
-Henry's Pub
+<h3>Henry's Pub</h3>
 
     Dec 15: Kinetic Soul</br>
 
-The Hideout
+<h3>The Hideout</h3>
 
     Dec 12: Sabo, Dink, Delia Ros</br>
     Dec 13: Cosmonauts, Burnt Ones, Amerikan Bear</br>
@@ -881,11 +881,11 @@ The Hideout
     Jan 4, 2015: Pants Karaoke</br>
     Feb 12, 2015: Pharmakon</br>
 
-Hilton Oceanfront Resort at Carlsbad Beach
+<h3>Hilton Oceanfront Resort at Carlsbad Beach</h3>
 
     Dec 31: Taste, Toast, & Coast into New Year</br>
 
-Hooleys Irish Pub & Grill La Mesa
+<h3>Hooleys Irish Pub & Grill La Mesa</h3>
 
     Dec 12: The Buzzbombs</br>
     Dec 13: Teagan Taylor</br>
@@ -895,7 +895,7 @@ Hooleys Irish Pub & Grill La Mesa
     Dec 27: Little Kings</br>
     Dec 31: Safety Orange</br>
 
-Hooleys Irish Pub & Grill Rancho San Diego
+<h3>Hooleys Irish Pub & Grill Rancho San Diego</h3>
 
     Dec 12: 22 Kings</br>
     Dec 13: Johnny Deadly Trio</br>
@@ -906,11 +906,11 @@ Hooleys Irish Pub & Grill Rancho San Diego
     Dec 27: Tim and Nolan</br>
     Dec 31: Radio Thieves</br>
 
-Horton Grand Theatre
+<h3>Horton Grand Theatre</h3>
 
     Dec 13: Latin Jazz Legends</br>
 
-House of Blues
+<h3>House of Blues</h3>
 
     Dec 14: Twelve Foot Ninja and In This Moment</br>
     Dec 14: Howie Day (Voodoo Room)</br>
@@ -961,7 +961,7 @@ House of Blues
     Apr 26, 2015: Kaiser Chiefs</br>
     May 1, 2015: OK GO</br>
 
-Humphreys Backstage Music Club
+<h3>Humphreys Backstage Music Club</h3>
 
     Dec 12: The Fabulous Ultratones</br>
     Dec 13: Sara Petite</br>
@@ -985,11 +985,11 @@ Humphreys Backstage Music Club
     Dec 31: Viva Santana</br>
     Jan 28, 2015: Debora Galan & Silk</br>
 
-Infinity at Pala Casino
+<h3>Infinity at Pala Casino</h3>
 
     Dec 31: Siren's Crush</br>
 
-The Irenic
+<h3>The Irenic</h3>
 
     Jan 8, 2015: Aesop Rock, Rob Sonic, DJ Abilities</br>
     Jan 11, 2015: Tig Notaro and Boyish Girl Interrupted</br>
@@ -997,11 +997,11 @@ The Irenic
     Mar 13, 2015: Kevin Devine, Dads, Field Mouse</br>
     Apr 10, 2015: Andrew Jackson Jihad</br>
 
-JT's Clubhouse Pub & Grill
+<h3>JT's Clubhouse Pub & Grill</h3>
 
     Dec 12: Just In Case and PunchCard</br>
 
-Java Joe's
+<h3>Java Joe's</h3>
 
     Dec 12: Peripherals and Fantino Friday</br>
     Dec 14: Open Mic hosted by Isaac Cheong</br>
@@ -1014,18 +1014,18 @@ Java Joe's
     Jan 17, 2015: Coco and Lafe</br>
     Jan 21, 2015: Robin Henkel Band</br>
 
-Joan B. Kroc Theatre
+<h3>Joan B. Kroc Theatre</h3>
 
     Dec 16: SD Concert Band Winter Celebration</br>
 
-The Jumping Turtle
+<h3>The Jumping Turtle</h3>
 
     Dec 13: Three Bad Jacks and the Pictographs</br>
     Dec 16: Karaoke with Rodeo Mike</br>
     Dec 20: Black Pearl Reggae and the Bleeskiez</br>
     Dec 23: Karaoke with Rodeo Mike</br>
 
-Kaffee Meister
+<h3>Kaffee Meister</h3>
 
     Dec 17: The Gypsy Swing Cats</br>
     Dec 18: Kaffee Open Mic</br>
@@ -1034,7 +1034,7 @@ Kaffee Meister
     Dec 31: The Gypsy Swing Cats</br>
     Jan 1, 2015: Kaffee Open Mic</br>
 
-The Kava Lounge
+<h3>The Kava Lounge</h3>
 
     Dec 13: Organized Grime: Optiv</br>
     Dec 14: Connectivity</br>
@@ -1052,42 +1052,42 @@ The Kava Lounge
     Jan 5, 2015: Ascension</br>
     Jan 6, 2015: High Tech Tuesdays</br>
 
-The Kensington Club
+<h3>The Kensington Club</h3>
 
     Dec 13: Midnight Track, Bat Lords, A-bortz</br>
     Jan 20, 2015: Calabrese and 13 Wolves</br>
 
-Kona Kai Resort & Marina
+<h3>Kona Kai Resort & Marina</h3>
 
     Dec 21: Whitney Shay and Robin Henkel</br>
     Dec 28: Joe Cardillo</br>
 
-The Kraken
+<h3>The Kraken</h3>
 
     Dec 18: Rio Peligroso</br>
     Dec 19: Rockgarden</br>
 
-La Jolla United Methodist Church
+<h3>La Jolla United Methodist Church</h3>
 
     Dec 14: Christmas Concert: How Great Our Joy</br>
 
-La Valencia Hotel
+<h3>La Valencia Hotel</h3>
 
     Dec 31: New Year’s Eve Celebrations</br>
 
-Lafayette Hotel, Swim Club & Bungalows
+<h3>Lafayette Hotel, Swim Club & Bungalows</h3>
 
     Dec 31: On With the Show: New Year's Eve</br>
 
-Lakeside Community Presbyterian Church
+<h3>Lakeside Community Presbyterian Church</h3>
 
     Dec 12: Vivaldi's Gloria</br>
 
-Last Call
+<h3>Last Call</h3>
 
     Dec 19: Diane Marie and Randy Lane</br>
 
-Lestat's Coffee House
+<h3>Lestat's Coffee House</h3>
 
     Dec 12: Brendan McCreary, Aaron & Jane, Rob Deez</br>
     Dec 13: Dat Phan & Friends</br>
@@ -1107,15 +1107,15 @@ Lestat's Coffee House
     Jan 14, 2015: Joe Marson and Anthony Hall</br>
     Jan 17, 2015: Allison Lonsdale and Eben Brooks</br>
 
-Level 9
+<h3>Level 9</h3>
 
     Dec 31: New Years Eve 2015</br>
 
-The Lodge at Torrey Pines
+<h3>The Lodge at Torrey Pines</h3>
 
     Dec 12: Mike Nelson</br>
 
-The Loft
+<h3>The Loft</h3>
 
     Dec 13: Allison Adams Tucker & UCSD Tritones</br>
     Dec 16: The Village Squares</br>
@@ -1124,16 +1124,16 @@ The Loft
     Feb 11, 2015: Lily & Madeleine</br>
     Mar 4, 2015: Kris Bowers</br>
 
-Manchester Grand Hyatt
+<h3>Manchester Grand Hyatt</h3>
 
     Jan 7, 2015: Jazz Educators Network Conference</br>
     May 2, 2015: USO San Diego 74th Stars & Stripes Ball</br>
 
-Mandeville Auditorium at UCSD
+<h3>Mandeville Auditorium at UCSD</h3>
 
     Dec 12: La Jolla Symphony & Chorus</br>
 
-Marina Kitchen
+<h3>Marina Kitchen</h3>
 
     Dec 12: Matt Heinecke</br>
     Dec 13: Christian Taylor</br>
@@ -1143,13 +1143,13 @@ Marina Kitchen
     Dec 31: Christian Taylor</br>
     Dec 31: Matt Heinecke</br>
 
-Martinis Above Fourth
+<h3>Martinis Above Fourth</h3>
 
     Dec 15: Chondra Profit: Jazzed Up Christmas</br>
     Dec 16: Take the Stage: A Customer Cabaret</br>
     Dec 31: New Year's Eve with Amy & Freddy</br>
 
-Meadowlark Community Church
+<h3>Meadowlark Community Church</h3>
 
     Dec 20: Peter Pupping Quartet and Tim Holcombe</br>
 
