--- a/venues.html
+++ b/venues.html
@@ -268,7 +268,7 @@
     Mar 3, 2015: Don Williams</br>
     Apr 11, 2015: Buddy Guy</br>
     May 3, 2015: Once Upon a Tiempo</br>
-    May 16, 2015: Arturo Sandoval & Poncho Sanchez</br>
+    May 16, 2015: Arturo Sandoval &amp; Poncho Sanchez</br>
 
 <h3>The Bancroft</h3>
 
@@ -277,7 +277,7 @@
     Dec 31: Back 2 Black</br>
     Jan 1, 2015: Darkwave Garden</br>
     Jan 5, 2015: Growl</br>
-    Jan 6, 2015: Bujie & the Highrise and Bleeskiez</br>
+    Jan 6, 2015: Bujie &amp; the Highrise and Bleeskiez</br>
 
 <h3>Bar Dynamite</h3>
 
@@ -302,7 +302,7 @@
     Dec 14: Rat Sabbath with DJ Ratty</br>
     Dec 15: The Husky Boy All-Stars</br>
     Dec 16: Tiki Tuesday</br>
-    Dec 19: Mr. Blow & Friends</br>
+    Dec 19: Mr. Blow &amp; Friends</br>
     Dec 20: Neon Beat</br>
     Dec 21: Rat Sabbath with DJ Ratty</br>
     Dec 22: Soultry Mondays</br>
@@ -333,13 +333,13 @@
     Dec 18: Adam Block Duo</br>
     Dec 19: Camino Paz</br>
     Dec 20: Melanie Taylor Band</br>
-    Dec 26: Fish & the Seaweeds</br>
+    Dec 26: Fish &amp; the Seaweeds</br>
     Dec 31: Rare Form</br>
 
 <h3>Belly Up</h3>
 
     Dec 12: Pepper, the Movement, New Beat Fund</br>
-    Dec 14: For the Sender: Sean & Sara Watkins</br>
+    Dec 14: For the Sender: Sean &amp; Sara Watkins</br>
     Dec 16: The Brian Setzer Orchestra</br>
     Dec 17: Nancarrow, Bastard Sons of Johnny Cash</br>
     Dec 18: Johnny Marr and Meredith Sheldon</br>
@@ -356,7 +356,7 @@
     Jan 1, 2015: Anuhea and Tribal Theory</br>
     Jan 2, 2015: Pato Banton</br>
     Jan 3, 2015: 5th Annual Beat Farmers Hootenanny</br>
-    Jan 4, 2015: Trombone Shorty & Orleans Avenue</br>
+    Jan 4, 2015: Trombone Shorty &amp; Orleans Avenue</br>
     Jan 9, 2015: Katchafire</br>
     Jan 10, 2015: Ozomatli</br>
     Jan 11, 2015: The Jayhawks</br>
@@ -367,11 +367,11 @@
     Jan 18, 2015: Six String Society</br>
     Jan 19, 2015: Randy Rogers Band and Wade Bowen</br>
     Jan 22, 2015: MarchFourth Marching Band</br>
-    Jan 23, 2015: Big Head Todd & The Monsters</br>
+    Jan 23, 2015: Big Head Todd &amp; The Monsters</br>
     Jan 25, 2015: Los Lobos and Hamish Anderson</br>
     Jan 27, 2015: The Wailers</br>
     Jan 29, 2015: Keller Williams and the Motet</br>
-    Jan 30, 2015: Dave Alvin, Phil Alvin & Guilty Ones</br>
+    Jan 30, 2015: Dave Alvin, Phil Alvin &amp; Guilty Ones</br>
     Jan 31, 2015: Abbey Road vs Jumpin' Jack Flash</br>
     Jan 31, 2015: Lovebirds, Tolan Shaw, Dr. Seahorse</br>
     Feb 2, 2015: Todd Snider and Reed Foehl</br>
@@ -380,7 +380,7 @@
     Feb 7, 2015: Dead Man's Party and Betamaxx</br>
     Feb 8, 2015: Jim Brickman</br>
     Feb 9, 2015: Battle of the Chef's Bands</br>
-    Feb 10, 2015: Granger Smith & Earl Dibbles, Jr.</br>
+    Feb 10, 2015: Granger Smith &amp; Earl Dibbles, Jr.</br>
     Feb 12, 2015: Zion I: The Rapture Tour</br>
     Feb 13, 2015: ALO and T Sisters</br>
     Feb 14, 2015: Ozomatli</br>
@@ -388,7 +388,7 @@
     Feb 18, 2015: Lotus</br>
     Feb 19, 2015: The Taj Mahal Trio</br>
     Feb 21, 2015: Steve Poltz, Rugburns, Shook Twins</br>
-    Feb 22, 2015: Zap Mama & Antibalas</br>
+    Feb 22, 2015: Zap Mama &amp; Antibalas</br>
     Feb 28, 2015: Pine Mountain Logs</br>
     Mar 4, 2015: Galactic</br>
     Mar 6, 2015: Super Diamond</br>
@@ -396,15 +396,15 @@
     Mar 11, 2015: Hurray for the Riff Raff</br>
     Mar 12, 2015: Martin Sexton and Brothers McCann</br>
     Mar 13, 2015: Twin Shadow</br>
-    Mar 14, 2015: Tommy Castro & the Painkillers</br>
+    Mar 14, 2015: Tommy Castro &amp; the Painkillers</br>
     Mar 20, 2015: Railroad Earth</br>
     Mar 25, 2015: Gang of Four</br>
     Mar 29, 2015: Jonny Lang</br>
-    Mar 31, 2015: Kitty, Daisy & Lewis</br>
+    Mar 31, 2015: Kitty, Daisy &amp; Lewis</br>
     Apr 1, 2015: Ed Kowalczyk: Throwing Copper Unplugged</br>
     Apr 24, 2015: The Dead Milkmen</br>
     May 3, 2015: They Might Be Giants</br>
-    May 7, 2015: Herb Alpert & Lani Hall</br>
+    May 7, 2015: Herb Alpert &amp; Lani Hall</br>
 
 <h3>Bernardo Winery</h3>
 
@@ -418,7 +418,7 @@
 
     Dec 13: Robin Henkel</br>
 
-<h3>Bistro Sixty & San Diego Desserts</h3>
+<h3>Bistro Sixty &amp; San Diego Desserts</h3>
 
     Dec 16: Bob Wade and Suzanne Shea
 
@@ -426,7 +426,7 @@
 
     Dec 20: Fast Heart Mart and MJ Stevens</br>
 
-<h3>Blackthorn Irish Pub & Grub</h3>
+<h3>Blackthorn Irish Pub &amp; Grub</h3>
 
     Jan 9, 2015: Blown Fuse</br>
 
@@ -464,13 +464,13 @@
     Jan 3, 2015: Sabado en Fuego</br>
     Jan 5, 2015: Manic Monday</br>
 
-<h3>Bread & Salt</h3>
+<h3>Bread &amp; Salt</h3>
 
     Jan 15, 2015: Fresh Sound: Red Fish Blue Fish</br>
     Feb 6, 2015: Fresh Sound: Ross Karre</br>
     Feb 18, 2015: Fresh Sound: Jean-Charles Francois Trio</br>
     Feb 21, 2015: MIXX Concert Series: Tango Popularé</br>
-    Mar 20, 2015: Fresh Sound: Aiyun Huang & Eric Derr</br>
+    Mar 20, 2015: Fresh Sound: Aiyun Huang &amp; Eric Derr</br>
     Apr 9, 2015: Fresh Sound: Brian Archinal</br>
     May 1, 2015: Fresh Sound: Kjell Nordeson</br>
     May 9, 2015: MIXX Concert Series: The Bossa Nova</br>
@@ -486,7 +486,7 @@
     Dec 20: Symbolic Holiday Toy Drive</br>
     Dec 22: Metal Mondays</br>
     Jan 8, 2015: Dictators NYC, Motor666, Authentic Sellout</br>
-    Jan 10, 2015: Jucifer and Author & Punisher</br>
+    Jan 10, 2015: Jucifer and Author &amp; Punisher</br>
     Jan 12, 2015: Metal Mondays</br>
     Jan 15, 2015: Saving Abel and Reef Bound Sol</br>
     Jan 16, 2015: Slaves Against the Machine</br>
@@ -516,7 +516,7 @@
     Dec 12: America, Juice Newton, more</br>
     Dec 17: Lúnasa with Karan Casey</br>
     Dec 23: Blind Boys of Alabama Christmas Show</br>
-    Jan 7, 2015: WOW First Wednesdays: Jimmy & Enrique</br>
+    Jan 7, 2015: WOW First Wednesdays: Jimmy &amp; Enrique</br>
     Jan 11, 2015: Intimate Classics: Jeffrey Siegel</br>
     Jan 17, 2015: Westminster Chorus</br>
     Jan 21, 2015: Jazzreach featuring Metta Quintet</br>
@@ -543,7 +543,7 @@
     Dec 16: Kainga Music Winter Steel Drum Concert</br>
     Mar 19, 2015: Cody Lovaas</br>
 
-<h3>Carvers Steak & Chops</h3>
+<h3>Carvers Steak &amp; Chops</h3>
 
     Dec 26: Mirage</br>
 
@@ -560,7 +560,7 @@
     Dec 16: Mystic Braves, Muscle Beech, Swift Beats</br>
     Dec 18: Manual Scan and NE1 reunions</br>
     Dec 19: Ziggy Shuffledust and Chinese Rocks</br>
-    Dec 20: Big Sandy & His Flyrite Boys</br>
+    Dec 20: Big Sandy &amp; His Flyrite Boys</br>
     Dec 21: Neighbors to the North and Subsurfer</br>
     Dec 21: Downs Family and Saint Shameless</br>
     Dec 22: Idyll Wild, Boychick, Casanova Frankenstein</br>
@@ -570,11 +570,11 @@
     Dec 29: Josh Damigo</br>
     Jan 3, 2015: Cattle Decapitation, Theories, Memory</br>
     Jan 8, 2015: Sean Watkins and Lauren Shera</br>
-    Jan 9, 2015: Whitey Morgan & the 78s and Jake Loban</br>
+    Jan 9, 2015: Whitey Morgan &amp; the 78s and Jake Loban</br>
     Jan 11, 2015: Flesh Eaters and Skating Polly</br>
     Jan 13, 2015: Midge Ure</br>
     Jan 14, 2015: Pinback</br>
-    Jan 17, 2015: Kid Congo & Pink Monkey Birds, Uke-Hunt</br>
+    Jan 17, 2015: Kid Congo &amp; Pink Monkey Birds, Uke-Hunt</br>
     Jan 18, 2015: White Arrows</br>
     Jan 19, 2015: Mariachi El Bronx</br>
     Jan 21, 2015: Waters</br>
@@ -586,7 +586,7 @@
     Feb 8, 2015: Mustard Plug, the Toasters, OSD</br>
     Feb 11, 2015: Hundred Waters</br>
     Feb 14, 2015: The Dodos</br>
-    Feb 15, 2015: Swami John Reis & the Blind Shake</br>
+    Feb 15, 2015: Swami John Reis &amp; the Blind Shake</br>
     Feb 21, 2015: Wild Child and Desert Noises</br>
     Feb 22, 2015: Cursive</br>
     Feb 23, 2015: Body Language</br>
@@ -611,7 +611,7 @@
 
     Dec 14: Randi's Damn Jingle Ball</br>
 
-<h3>Cheers Bar & Grill</h3>
+<h3>Cheers Bar &amp; Grill</h3>
 
     Dec 13: Kamodo Roxx</br>
     Jan 3, 2015: Teaser</br>
@@ -650,7 +650,7 @@
     Jan 9, 2015: Jacobs Masterworks Series</br>
     Feb 13, 2015: Rotterdam Philharmonic Orchestra</br>
     Feb 27, 2015: Jacobs Masterworks Series</br>
-    Mar 20, 2015: Herbie Hancock & Chick Corea</br>
+    Mar 20, 2015: Herbie Hancock &amp; Chick Corea</br>
     Mar 27, 2015: Jacobs Masterworks Series</br>
     Mar 29, 2015: London Symphony Orchestra</br>
     Apr 18, 2015: SD Opera 50th Anniversary Gala Concert</br>
@@ -666,10 +666,10 @@
 
     Dec 14: Inspiration Series Concert</br>
 
-<h3>The Coyote Bar & Grill</h3>
+<h3>The Coyote Bar &amp; Grill</h3>
 
     Dec 12: The Decades Band</br>
-    Dec 13: Master Splinter & the Shredders</br>
+    Dec 13: Master Splinter &amp; the Shredders</br>
     Dec 14: Dante Fire</br>
     Dec 17: The Brokers Band</br>
     Dec 18: Cuddlefish</br>
@@ -679,7 +679,7 @@
     Dec 21: Jerome Dawson</br>
     Dec 27: Zydeco Blues Patrol</br>
     Dec 28: Billy Martin</br>
-    Dec 31: Master Splinter & the Shredders
+    Dec 31: Master Splinter &amp; the Shredders
 
 <h3>Croce's Park West</h3>
 
@@ -689,19 +689,19 @@
     Dec 15: Nina Francis</br>
     Dec 16: 45 Revolutions</br>
     Dec 17: Castellanos Young Lions: Chans Valdez</br>
-    Dec 18: Gilbert Castellanos & Park West Ensemble</br>
+    Dec 18: Gilbert Castellanos &amp; Park West Ensemble</br>
     Dec 19: Besos de Coco</br>
     Dec 20: Coast Bop</br>
     Dec 21: Danny Green Trio</br>
     Dec 22: Mark Fisher</br>
-    Dec 23: Steph Johnson & Rob Thorsen</br>
+    Dec 23: Steph Johnson &amp; Rob Thorsen</br>
     Dec 24: 45 Revolutions</br>
     Dec 26: Sue Palmer</br>
-    Dec 27: Eve Selis & friends</br>
+    Dec 27: Eve Selis &amp; friends</br>
     Dec 28: Besos de Coco</br>
     Dec 29: Lorraine Castellanos</br>
     Dec 30: Nina Francis</br>
-    Dec 31: Gilbert Castellanos & Park West Ensemble</br>
+    Dec 31: Gilbert Castellanos &amp; Park West Ensemble</br>
 
 <h3>Cuyamaca College</h3>
 
@@ -750,7 +750,7 @@
 
     Dec 20: Brown Sugar Band</br>
 
-<h3>Eastbound Bar & Grill</h3>
+<h3>Eastbound Bar &amp; Grill</h3>
 
     Dec 12: DJ Skwiz</br>
     Dec 13: Will Ramsey</br>
@@ -800,9 +800,9 @@
     Dec 18: Souljahs of Christ Music Festival</br>
     Dec 19: DJ Chris Cutz</br>
 
-<h3>Gallagher's Pub & Grill</h3>
+<h3>Gallagher's Pub &amp; Grill</h3>
 
-    Dec 18: Shamrocks & Dreadlocks</br>
+    Dec 18: Shamrocks &amp; Dreadlocks</br>
 
 <h3>Ginger's</h3>
 
@@ -814,7 +814,7 @@
 
 <h3>Grace Episcopal Church</h3>
 
-    Dec 13: 9 Lessons & Christmas Caroling</br>
+    Dec 13: 9 Lessons &amp; Christmas Caroling</br>
 
 <h3>The Grand Del Mar</h3>
 
@@ -860,7 +860,7 @@
     Dec 22: Benefit for Ritchie</br>
     Dec 23: Surefire Soul Ensemble</br>
     Dec 24: Xmas Party</br>
-    Dec 26: Boogie Bubba & Friends</br>
+    Dec 26: Boogie Bubba &amp; Friends</br>
     Dec 27: Soul Ablaze, Jonnae Thompson, Peach</br>
     Dec 28: Pants Karaoke</br>
     Dec 29: Jonah Matranga and Daniel Godfrey</br>
@@ -871,7 +871,7 @@
 
 <h3>Hilton Oceanfront Resort at Carlsbad Beach</h3>
 
-    Dec 31: Taste, Toast, & Coast into New Year</br>
+    Dec 31: Taste, Toast, &amp; Coast into New Year</br>
 
     
 
@@ -886,7 +886,7 @@
         <div class = "test2">
 
 
-<h3>Hooleys Irish Pub & Grill La Mesa</h3>
+<h3>Hooleys Irish Pub &amp; Grill La Mesa</h3>
 
     Dec 12: The Buzzbombs</br>
     Dec 13: Teagan Taylor</br>
@@ -896,7 +896,7 @@
     Dec 27: Little Kings</br>
     Dec 31: Safety Orange</br>
 
-<h3>Hooleys Irish Pub & Grill Rancho San Diego</h3>
+<h3>Hooleys Irish Pub &amp; Grill Rancho San Diego</h3>
 
     Dec 12: 22 Kings</br>
     Dec 13: Johnny Deadly Trio</br>
@@ -925,9 +925,9 @@
     Dec 31: HOB New Years Eve 2015 Block Party</br>
     Jan 5, 2015: Pity Sex and Whirr</br>
     Jan 9, 2015: 6one9, Madman, Arena</br>
-    Jan 10, 2015: Lola Demure’s Burlesque & Variety Show</br>
+    Jan 10, 2015: Lola Demure’s Burlesque &amp; Variety Show</br>
     Jan 16, 2015: Anthony Green</br>
-    Jan 18, 2015: G. Love & Special Sauce</br>
+    Jan 18, 2015: G. Love &amp; Special Sauce</br>
     Jan 21, 2015: Guster</br>
     Jan 22, 2015: Scott Bradlee’s Postmodern Jukebox</br>
     Jan 23, 2015: Local Blues Local Grooves</br>
@@ -955,7 +955,7 @@
     Mar 15, 2015: The Expendables</br>
     Mar 16, 2015: Ani DiFranco</br>
     Mar 17, 2015: Shpongle</br>
-    Mar 19, 2015: Dan & Shay</br>
+    Mar 19, 2015: Dan &amp; Shay</br>
     Mar 25, 2015: The Pink Floyd Experience</br>
     Mar 29, 2015: Echosmith</br>
     Apr 13, 2015: The Sing Off Live Tour</br>
@@ -967,7 +967,7 @@
     Dec 12: The Fabulous Ultratones</br>
     Dec 13: Sara Petite</br>
     Dec 14: Eric Darius</br>
-    Dec 15: Ruby & the Red Hots</br>
+    Dec 15: Ruby &amp; the Red Hots</br>
     Dec 16: Backwater Blues Band</br>
     Dec 17: Willovealot</br>
     Dec 18: The Sully Band</br>
@@ -984,7 +984,7 @@
     Dec 28: R-Thyme</br>
     Dec 30: Blue Largo</br>
     Dec 31: Viva Santana</br>
-    Jan 28, 2015: Debora Galan & Silk</br>
+    Jan 28, 2015: Debora Galan &amp; Silk</br>
 
 <h3>Infinity at Pala Casino</h3>
 
@@ -998,7 +998,7 @@
     Mar 13, 2015: Kevin Devine, Dads, Field Mouse</br>
     Apr 10, 2015: Andrew Jackson Jihad</br>
 
-<h3>JT's Clubhouse Pub & Grill</h3>
+<h3>JT's Clubhouse Pub &amp; Grill</h3>
 
     Dec 12: Just In Case and PunchCard</br>
 
@@ -1006,7 +1006,7 @@
 
     Dec 12: Peripherals and Fantino Friday</br>
     Dec 14: Open Mic hosted by Isaac Cheong</br>
-    Dec 17: Hassle & Hound and Fresh Air</br>
+    Dec 17: Hassle &amp; Hound and Fresh Air</br>
     Dec 18: Gregory Page</br>
     Dec 19: Barbara Nesbitt</br>
     Dec 20: Alison Marae Student Recital</br>
@@ -1067,7 +1067,7 @@
     Dec 13: Midnight Track, Bat Lords, A-bortz</br>
     Jan 20, 2015: Calabrese and 13 Wolves</br>
 
-<h3>Kona Kai Resort & Marina</h3>
+<h3>Kona Kai Resort &amp; Marina</h3>
 
     Dec 21: Whitney Shay and Robin Henkel</br>
     Dec 28: Joe Cardillo</br>
@@ -1085,7 +1085,7 @@
 
     Dec 31: New Year’s Eve Celebrations</br>
 
-<h3>Lafayette Hotel, Swim Club & Bungalows</h3>
+<h3>Lafayette Hotel, Swim Club &amp; Bungalows</h3>
 
     Dec 31: On With the Show: New Year's Eve</br>
 
@@ -1099,8 +1099,8 @@
 
 <h3>Lestat's Coffee House</h3>
 
-    Dec 12: Brendan McCreary, Aaron & Jane, Rob Deez</br>
-    Dec 13: Dat Phan & Friends</br>
+    Dec 12: Brendan McCreary, Aaron &amp; Jane, Rob Deez</br>
+    Dec 13: Dat Phan &amp; Friends</br>
     Dec 14: Scott West</br>
     Dec 15: Open Mic Night</br>
     Dec 17: Caroline Corn, Tim Connolly, IIya Shatov</br>
@@ -1111,7 +1111,7 @@
     Dec 21: Roni Lee Rocks Christmas 2</br>
     Dec 22: Open Mic Night</br>
     Dec 26: Gregory Page Christmas Show</br>
-    Dec 27: Dat Phan & Friends</br>
+    Dec 27: Dat Phan &amp; Friends</br>
     Jan 2, 2015: Sophia Bacino, Kennady Tracy, Tim Connolly</br>
     Jan 11, 2015: Robin Henkel Band with Horns</br>
     Jan 14, 2015: Joe Marson and Anthony Hall</br>
@@ -1127,21 +1127,21 @@
 
 <h3>The Loft</h3>
 
-    Dec 13: Allison Adams Tucker & UCSD Tritones</br>
+    Dec 13: Allison Adams Tucker &amp; UCSD Tritones</br>
     Dec 16: The Village Squares</br>
     Jan 7, 2015: Julian Lage</br>
     Jan 15, 2015: The Nomads, HM3, Joshua White</br>
-    Feb 11, 2015: Lily & Madeleine</br>
+    Feb 11, 2015: Lily &amp; Madeleine</br>
     Mar 4, 2015: Kris Bowers</br>
 
 <h3>Manchester Grand Hyatt</h3>
 
     Jan 7, 2015: Jazz Educators Network Conference</br>
-    May 2, 2015: USO San Diego 74th Stars & Stripes Ball</br>
+    May 2, 2015: USO San Diego 74th Stars &amp; Stripes Ball</br>
 
 <h3>Mandeville Auditorium at UCSD</h3>
 
-    Dec 12: La Jolla Symphony & Chorus</br>
+    Dec 12: La Jolla Symphony &amp; Chorus</br>
 
 <h3>Marina Kitchen</h3>
 
@@ -1157,7 +1157,7 @@
 
     Dec 15: Chondra Profit: Jazzed Up Christmas</br>
     Dec 16: Take the Stage: A Customer Cabaret</br>
-    Dec 31: New Year's Eve with Amy & Freddy</br>
+    Dec 31: New Year's Eve with Amy &amp; Freddy</br>
 
 <h3>Meadowlark Community Church</h3>
 
