Added imgs for index page pop events

--- a/untitled.html
+++ b/untitled.html
@@ -249,20 +249,22 @@
             <h2>Popular Events</h2>
             <div class="col-md-3">
             <img src="./images/julian.jpg" alt="">
-              <p>Artpower! Presents: Julian Page</p>
+              <p>Artpower! Julian Page<br/>December 20</p>
               <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
             </div><!--/.col-xs-6.col-lg-4-->
             <div class="col-md-3">
             <img src="./images/growlers.jpg" alt="">
-              <p>The growlers at Belly up December 22</p>
+              <p>The growlers at Belly up<br/>December 22</p>
               <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
             </div><!--/.col-xs-6.col-lg-4-->
           <div class="col-md-3">
-              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+            <img src="./images/concert1.jpg" alt =""/>
+              <p>Capital Cities' concert<br/>December 23</p>
               <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
             </div><!--/.col-xs-6.col-lg-4-->
             <div class="col-md-3">
-              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+              <img src="./images/elephant.jpg" alt =""/>
+              <p>Black Star Elephant<br/>December 25</p>
               <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
             </div><!--/.col-xs-6.col-lg-4-->
            <hr>
