belly up venue page

--- a/bellyup.html
+++ b/bellyup.html
@@ -164,7 +164,6 @@
 
 
     <div class="container">
-
       <div class="row">
         <div class="col-md-8">
 
@@ -172,7 +171,6 @@
 
 <img src = "./images/bellyvenue.jpg">
 </div>
-
 
 
 <div class = "col-md-6">
@@ -183,6 +181,84 @@
 858-481-8140</br>
 Website: <a href="http://bellyup.com/">Bellyup.com</a>
 </p>
+</div>
+
+
+<div class = "col-md-7">
+
+<h2>Upcoming Events</h2>
+Dec 12: Pepper, the Movement, New Beat Fund</br>
+    Dec 14: For the Sender: Sean &amp; Sara Watkins</br>
+    Dec 16: The Brian Setzer Orchestra</br>
+    Dec 17: Nancarrow, Bastard Sons of Johnny Cash</br>
+    Dec 18: Johnny Marr and Meredith Sheldon</br>
+    Dec 19: Who's Bad: Michael Jackson tribute</br>
+    Dec 20: Ugly Sweater Party: Young Guns, more</br>
+    Dec 21: Dick Dale's Holiday Show</br>
+    Dec 22: The Growlers</br>
+    Dec 26: A Cash'd Out Christmas</br>
+    Dec 27: Greyboy Allstars</br>
+    Dec 28: The Aggrolites and Creepy Creeps</br>
+    Dec 29: Tainted Love '80s Dance</br>
+    Dec 30: Cracker and Camper Van Beethoven</br>
+    Dec 31: Donovan Frankenreiter</br>
+    Jan 1, 2015: Anuhea and Tribal Theory</br>
+    Jan 2, 2015: Pato Banton</br>
+    Jan 3, 2015: 5th Annual Beat Farmers Hootenanny</br>
+    Jan 4, 2015: Trombone Shorty &amp; Orleans Avenue</br>
+    Jan 9, 2015: Katchafire</br>
+    Jan 10, 2015: Ozomatli</br>
+    Jan 11, 2015: The Jayhawks</br>
+    Jan 14, 2015: Marc Cohn</br>
+    Jan 15, 2015: Dead Kennedys, White Kaps, HTTH</br>
+    Jan 16, 2015: Wild Child</br>
+    Jan 17, 2015: Tower of Power and Ben Powell Duo</br>
+    Jan 18, 2015: Six String Society</br>
+    Jan 19, 2015: Randy Rogers Band and Wade Bowen</br>
+    Jan 22, 2015: MarchFourth Marching Band</br>
+    Jan 23, 2015: Big Head Todd &amp; The Monsters</br>
+    Jan 25, 2015: Los Lobos and Hamish Anderson</br>
+    Jan 27, 2015: The Wailers</br>
+    Jan 29, 2015: Keller Williams and the Motet</br>
+    Jan 30, 2015: Dave Alvin, Phil Alvin &amp; Guilty Ones</br>
+ 
+    </div>
+
+<div class = "col-md-5" >
+
+   Jan 31, 2015: Abbey Road vs Jumpin' Jack Flash</br>
+    Jan 31, 2015: Lovebirds, Tolan Shaw, Dr. Seahorse</br>
+    Feb 2, 2015: Todd Snider and Reed Foehl</br>
+    Feb 3, 2015: Lettuce and Break Science</br>
+    Feb 5, 2015: Kenny Wayne Shepherd Band</br>
+    Feb 7, 2015: Dead Man's Party and Betamaxx</br>
+    Feb 8, 2015: Jim Brickman</br>
+    Feb 9, 2015: Battle of the Chef's Bands</br>
+    Feb 10, 2015: Granger Smith &amp; Earl Dibbles, Jr.</br>
+    Feb 12, 2015: Zion I: The Rapture Tour</br>
+    Feb 13, 2015: ALO and T Sisters</br>
+    Feb 14, 2015: Ozomatli</br>
+    Feb 17, 2015: Over the Rhine and William Fitzsimmons</br>
+    Feb 18, 2015: Lotus</br>
+    Feb 19, 2015: The Taj Mahal Trio</br>
+    Feb 21, 2015: Steve Poltz, Rugburns, Shook Twins</br>
+    Feb 22, 2015: Zap Mama &amp; Antibalas</br>
+    Feb 28, 2015: Pine Mountain Logs</br>
+    Mar 4, 2015: Galactic</br>
+    Mar 6, 2015: Super Diamond</br>
+    Mar 10, 2015: Joshua Radin and Rachael Yamagata</br>
+    Mar 11, 2015: Hurray for the Riff Raff</br>
+    Mar 12, 2015: Martin Sexton and Brothers McCann</br>
+    Mar 13, 2015: Twin Shadow</br>
+    Mar 14, 2015: Tommy Castro &amp; the Painkillers</br>
+    Mar 20, 2015: Railroad Earth</br>
+    Mar 25, 2015: Gang of Four</br>
+    Mar 29, 2015: Jonny Lang</br>
+    Mar 31, 2015: Kitty, Daisy &amp; Lewis</br>
+    Apr 1, 2015: Ed Kowalczyk: Throwing Copper Unplugged</br>
+    Apr 24, 2015: The Dead Milkmen</br>
+    May 3, 2015: They Might Be Giants</br>
+    May 7, 2015: Herb Alpert &amp; Lani Hall</br>
 </div>
  
                     
