added maps to 207 night club

--- a/207.html
+++ b/207.html
@@ -219,10 +219,10 @@ Thursday, December 18, 9:00 p.m.</p>
                           </div><!--/.col-xs-12.col-sm-9-->
 
                           <div class="col-md-4 sidebar-offcanvas" id="sidebar" role="navigation">
-                            <h2>Concert Feed</h2>
+                            <h2>Maps and Directions</h2>
 
                             <div class="list-group">
-                              <iframe src="https://www.google.com/calendar/embed?showTitle=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;mode=AGENDA&amp;height=400&amp;wkst=1&amp;bgcolor=%2366cccc&amp;src=alrodz018%40gmail.com&amp;color=%232952A3&amp;ctz=America%2FLos_Angeles" style=" border-width:0 " width="400" height="400" frameborder="0" scrolling="no"></iframe>
+                              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3357.193897346853!2d-117.15938500000003!3d32.707474999999995!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80d9535a58565097%3A0xea18d6f0d39dc15a!2s207+at+Hard+Rock+Hotel!5e0!3m2!1sen!2sus!4v1418433535477" width="400" height="300" frameborder="0" style="border:0"></iframe>
                             </div>
                           </div><!--/.sidebar-offcanvas-->
                         </div><!--/row-->
